# surrealdb-axum-graphql

./: Cargo.toml  README.md
src/: graphql.rs  main.rs
src/graphql/: mutations.rs  queries.rs  schema.rs
src/graphql/mutations/: root_mutation.rs
src/graphql/queries/: root_query.rs
src/graphql/types/: response.rs  search.rs
