[package]
name = "surrealdb-axum-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.7", features = ["playground"] }
async-graphql-axum = "5.0.7"
axum = "0.6.18"
axum-macros = "0.3.7"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.28.0", features = ["full"] }
